# algorithm-design-analysis-labs

./: .gitignore  03413011算法设计与分析实验指导书（0.5学分）.docx  CMakeLists.txt  README.md
exp1_fake_coin/: README.md
exp1_fake_coin/samples/: sample_input.txt
exp1_fake_coin/src/: main.cpp
exp2_maze_paths/: README.md
exp2_maze_paths/samples/: sample_input.txt
exp2_maze_paths/src/: main.cpp
exp3_rescue_a/: README.md
exp3_rescue_a/samples/: sample_input.txt
exp3_rescue_a/src/: main.cpp
exp4_homework_scheduling/: README.md
exp4_homework_scheduling/samples/: sample_input.txt
exp4_homework_scheduling/src/: main.cpp
reports/: 实验一_查找假币问题_实验报告.docx  实验三_在原始森林中解救A_实验报告.docx  实验二_迷宫路径_实验报告.docx  实验四_赶作业_实验报告.docx  截图清单.md
scripts/: generate_reports.py
